After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708596 - Fix cast in format string
Fix cast in format string
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-23 02:38 UTC by Hashem Nasarat
Modified: 2013-09-26 15:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix cast in format string (1.38 KB, patch)
2013-09-23 02:38 UTC, Hashem Nasarat
none Details | Review

Description Hashem Nasarat 2013-09-23 02:38:06 UTC
format ‘%u’ expects argument of type ‘unsigned int’ but was passed
variables of type gsize. With this change, compiling with debugging
enabled works again.
Comment 1 Hashem Nasarat 2013-09-23 02:38:08 UTC
Created attachment 255541 [details] [review]
Fix cast in format string