debug: Use the right printf modifiers

G_GSIZE_FORMAT for gsize, not 'u'.

https://bugzilla.gnome.org/show_bug.cgi?id=708596